[gd_scene load_steps=8 format=3 uid="uid://b1ghor281ult"]

[ext_resource type="Script" uid="uid://c8uh60161mg2a" path="res://scenes/ui/level_select/level_select.gd" id="1_kvtm6"]
[ext_resource type="Shader" uid="uid://bbab2riuh3e74" path="res://resources/shaders/scroll_shader.gdshader" id="2_5qe3y"]
[ext_resource type="Texture2D" uid="uid://dblhnqfqhnqqr" path="res://assets/main_menu/outer-space.png" id="3_sgptt"]
[ext_resource type="Texture2D" uid="uid://cwxpr25cqu2gy" path="res://assets/stages/stage-select1.png" id="4_5qe3y"]
[ext_resource type="Texture2D" uid="uid://needxibfqjq6" path="res://assets/stages/stage-select2.png" id="5_sgptt"]
[ext_resource type="Texture2D" uid="uid://daa01atijvd6i" path="res://assets/stages/stage-select3.png" id="6_re87o"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_re87o"]
shader = ExtResource("2_5qe3y")
shader_parameter/x_speed = 0.01
shader_parameter/y_speed = 0.01

[node name="LevelSelect" type="CanvasLayer"]
script = ExtResource("1_kvtm6")

[node name="OuterSpace" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_re87o")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_sgptt")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Level1Card" type="PanelContainer" parent="Control/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/CenterContainer/HBoxContainer/Level1Card"]
layout_mode = 2
theme_override_constants/margin_top = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer/HBoxContainer/Level1Card/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="Control/CenterContainer/HBoxContainer/Level1Card/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "STAGE_1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer1" type="PanelContainer" parent="Control/CenterContainer/HBoxContainer/Level1Card/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"AlternativePanelContainer"

[node name="TextureRect" type="TextureRect" parent="Control/CenterContainer/HBoxContainer/Level1Card/MarginContainer/VBoxContainer/PanelContainer1"]
custom_minimum_size = Vector2(0, 62)
layout_mode = 2
texture = ExtResource("4_5qe3y")
expand_mode = 3
stretch_mode = 5

[node name="PanelContainer2" type="PanelContainer" parent="Control/CenterContainer/HBoxContainer/Level1Card/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 37)
layout_mode = 2
theme_type_variation = &"AlternativePanelContainer"

[node name="Label" type="Label" parent="Control/CenterContainer/HBoxContainer/Level1Card/MarginContainer/VBoxContainer/PanelContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "CAFFEINATED_ENC"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
uppercase = true

[node name="PanelContainer3" type="PanelContainer" parent="Control/CenterContainer/HBoxContainer/Level1Card/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"AlternativePanelContainer"

[node name="Label" type="Label" parent="Control/CenterContainer/HBoxContainer/Level1Card/MarginContainer/VBoxContainer/PanelContainer3"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_constants/line_spacing = 1
text = "CAFF_DESC"
horizontal_alignment = 1
autowrap_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/CenterContainer/HBoxContainer/Level1Card/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 4

[node name="Level1Button" type="Button" parent="Control/CenterContainer/HBoxContainer/Level1Card/MarginContainer/VBoxContainer/MarginContainer" groups=["ui_buttons"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(65, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "SELECT"

[node name="Level2Card" type="PanelContainer" parent="Control/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/CenterContainer/HBoxContainer/Level2Card"]
layout_mode = 2
theme_override_constants/margin_top = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer/HBoxContainer/Level2Card/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="Control/CenterContainer/HBoxContainer/Level2Card/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "STAGE_2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer1" type="PanelContainer" parent="Control/CenterContainer/HBoxContainer/Level2Card/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"AlternativePanelContainer"

[node name="TextureRect" type="TextureRect" parent="Control/CenterContainer/HBoxContainer/Level2Card/MarginContainer/VBoxContainer/PanelContainer1"]
custom_minimum_size = Vector2(0, 62)
layout_mode = 2
texture = ExtResource("5_sgptt")
expand_mode = 3
stretch_mode = 5

[node name="PanelContainer2" type="PanelContainer" parent="Control/CenterContainer/HBoxContainer/Level2Card/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 37)
layout_mode = 2
theme_type_variation = &"AlternativePanelContainer"

[node name="Label" type="Label" parent="Control/CenterContainer/HBoxContainer/Level2Card/MarginContainer/VBoxContainer/PanelContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "THE_ESPRESSO"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
uppercase = true

[node name="PanelContainer3" type="PanelContainer" parent="Control/CenterContainer/HBoxContainer/Level2Card/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"AlternativePanelContainer"

[node name="Label" type="Label" parent="Control/CenterContainer/HBoxContainer/Level2Card/MarginContainer/VBoxContainer/PanelContainer3"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_constants/line_spacing = 1
text = "ESPRESSO_DESC"
horizontal_alignment = 1
autowrap_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/CenterContainer/HBoxContainer/Level2Card/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 4

[node name="Level2Button" type="Button" parent="Control/CenterContainer/HBoxContainer/Level2Card/MarginContainer/VBoxContainer/MarginContainer" groups=["ui_buttons"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(65, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
disabled = true
text = "SELECT"

[node name="Level3Card" type="PanelContainer" parent="Control/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/CenterContainer/HBoxContainer/Level3Card"]
layout_mode = 2
theme_override_constants/margin_top = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer/HBoxContainer/Level3Card/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="Control/CenterContainer/HBoxContainer/Level3Card/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "STAGE_3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer1" type="PanelContainer" parent="Control/CenterContainer/HBoxContainer/Level3Card/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"AlternativePanelContainer"

[node name="TextureRect" type="TextureRect" parent="Control/CenterContainer/HBoxContainer/Level3Card/MarginContainer/VBoxContainer/PanelContainer1"]
custom_minimum_size = Vector2(0, 62)
layout_mode = 2
texture = ExtResource("6_re87o")
expand_mode = 3
stretch_mode = 5

[node name="PanelContainer2" type="PanelContainer" parent="Control/CenterContainer/HBoxContainer/Level3Card/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 37)
layout_mode = 2
theme_type_variation = &"AlternativePanelContainer"

[node name="Label" type="Label" parent="Control/CenterContainer/HBoxContainer/Level3Card/MarginContainer/VBoxContainer/PanelContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "BATTLESTAR"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
uppercase = true

[node name="PanelContainer3" type="PanelContainer" parent="Control/CenterContainer/HBoxContainer/Level3Card/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"AlternativePanelContainer"

[node name="Label" type="Label" parent="Control/CenterContainer/HBoxContainer/Level3Card/MarginContainer/VBoxContainer/PanelContainer3"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_constants/line_spacing = 1
text = "BATTLE_DESC"
horizontal_alignment = 1
autowrap_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/CenterContainer/HBoxContainer/Level3Card/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 4

[node name="Level3Button" type="Button" parent="Control/CenterContainer/HBoxContainer/Level3Card/MarginContainer/VBoxContainer/MarginContainer" groups=["ui_buttons"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(65, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
disabled = true
text = "SELECT"

[node name="MarginContainer" type="MarginContainer" parent="Control"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -28.0
offset_right = 60.0
grow_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_bottom = 10

[node name="BackButton" type="Button" parent="Control/MarginContainer" groups=["ui_buttons"]]
unique_name_in_owner = true
layout_mode = 2
text = "BACK"
